--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,8 +10,13 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-    <form>
+    <form action="" method="">
+      <label for="">NAME:</label>
+      <p><input type="text" name=" id=" /></p>
+      <label for="">FAVORITE FOOD:</label>
+      <p><input type="text" name=" id=" /></p>
       
+      <input type="submit" value="Submit" />
     </form>
   </body>
 </html>
