automatically backed up by learn

--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,10 +11,8 @@
 
     <!-- Insert Your Form Below -->
     <form action="" method="">
-      <label for="">NAME:</label>
-      <p><input type="text" name=" id=" /></p>
-      <label for="">FAVORITE FOOD:</label>
-      <p><input type="text" name=" id=" /></p>
+      <p>NAME:<input type="text" name=" id=" /></p>
+      <p>FAVORITE FOOD:<input type="text" name=" id=" /></p>
       
       <input type="submit" value="Submit" />
     </form>
