automatically backed up by learn

--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,8 +11,8 @@
 
     <!-- Insert Your Form Below -->
     <form action="/food" method="POST">
-      <p>NAME:<input type="text" name=" id=" /></p>
-      <p>FAVORITE FOOD:<input type="text" name=" id=" /></p>
+      <p>NAME:<input type="text" name="name" id="" /></p>
+      <p>FAVORITE FOOD:<input type="text" name="name" id="" /></p>
       
       <input type="submit" value="Submit" />
     </form>
