--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,7 +12,7 @@
     <!-- Insert Your Form Below -->
     <form action="/food" method="POST">
       <p>NAME:<input type="text" name="name" id="" /></p>
-      <p>FAVORITE FOOD:<input type="text" name="name" id="" /></p>
+      <p>FAVORITE FOOD:<input type="text" name="favorite_food" id="" /></p>
       
       <input type="submit" value="Submit" />
     </form>
